Config and layout

--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 ---
 layout: home
 author_profile: true
+header:
+  image: assets/images/kevin-ku-w7ZyuGYNpRQ-unsplash-teaser-x1200.jpg
+  teaser: assets/images/kevin-ku-w7ZyuGYNpRQ-unsplash-teaser-x1200.jpg
+classes: wide
 ---
